force-app/main/default/objects/Candidate__c/fields/Is__c.field-meta.xml
<CustomField>
    <fullName>Is__c</fullName>
    <formula>IF( ISPICKVAL(Status__c, &quot;Disqualified&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is disqualified</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>