force-app/main/default/objects/Candidate__c/fields/Is_Hired__c.field-meta.xml
<CustomField>
    <fullName>Is_Hired__c</fullName>
    <formula>IF( ISPICKVAL(Status__c, &quot;Hired&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Hired</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>