force-app/main/default/objects/Candidate__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>Numeric field, amount  should be greater than 0</description>
    <label>Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>