force-app/main/default/objects/Candidate__c/validationRules/More_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>More_than_0</fullName>
    <active>true</active>
    <description>Salary should be more than 0</description>
    <errorConditionFormula>OR(ISBLANK(Salary__c), Salary__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Salary__c</errorDisplayField>
    <errorMessage>Salary should be greater than 0</errorMessage>
</ValidationRule>