force-app/main/default/objects/Candidate__c/listViews/Disqualified.listView-meta.xml
<ListView>
    <fullName>Disqualified</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Disqualified</value>
    </filters>
    <label>Disqualified</label>
</ListView>