force-app/main/default/objects/Candidate__c/listViews/hiri.listView-meta.xml
<ListView>
    <fullName>hiri</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Hired</value>
    </filters>
    <label>Hired</label>
</ListView>