force-app/main/default/objects/Candidate__c/listViews/New_Candidates.listView-meta.xml
<ListView>
    <fullName>New_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Candidates</label>
</ListView>