force-app/main/default/objects/Candidate__c/listViews/Validated_by_HR.listView-meta.xml
<ListView>
    <fullName>Validated_by_HR</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Validated by HR</value>
    </filters>
    <label>Validated by HR</label>
</ListView>